# Peripheral-Manager

./: .gitignore  Pipfile  README.md  connection.py  devices.py  pyproject.toml  server.py  server.spec  syringepumpconnection.py
drivers/brand_model/: __init__.py
templates/: index.html
