[tool.poetry]
name = "peripheral-manager"
version = "0.1.0"
description = "A web-socket + serial socket communication bridge aimed to help the control of microfluidics hardware"
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
eventlet = "^0.31.0"
pyserial = "^3.5"
python-socketio = "^5.3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.8.3"
pyinstaller = "^4.3"
isort = "^5.9.1"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
